# hpt-kraken-trading-bot

./: .env.example  .gitignore  DEPLOY.md  KUBE_DEPLOY.md  README.md  docker-compose.yml
auto/: .env.example  CLAUDE.md  (+3 more)
auto/data-collector/: Dockerfile  README.md  crypto_watchlist.json  pyproject.toml
auto/data-collector/requirements/: requirements-cdc.in  requirements-cdc.txt
auto/data-collector/scripts/: entrypoint.sh  seed_cache.py  setup.sh
auto/data-collector/src/crypto_data_collector/: config.py  kraken_client.py  main.py  questdb_schema.py  questdb_writer.py  scheduler.py  watchlist.py
auto/data-collector/tests/: test_kraken_client.py  test_logging_setup.py  test_scheduler.py  test_transform.py  test_watchlist.py
auto/data-collector/wiki/: CONNECT.md
auto/llm/: Dockerfile  README.md  pyproject.toml
auto/llm/src/hpt_llm/: bot.py  config.py  kafka_producer.py  llm.py  metrics.py  questdb.py  scheduler.py
auto/llm/src/hpt_llm/tools/: __init__.py  base.py  bitcoin.py  crypto_event_classifier.py  gdelt.py  get_theory.py  supply_chain_theory.py
auto/llm/src/hpt_llm/tools/historical/: __init__.py  fingerprint.py  historical_search.py  storyline_clusterer.py
auto/llm/tests/: test_historical_analogs.py  test_supply_chain_theory.py  test_theory_loop.py  test_watchlist.py
auto/llm/wiki/: TESTING.md
auto/signal-service/: Dockerfile  pyproject.toml
auto/signal-service/requirements/: requirements-ss.in  requirements-ss.txt
auto/signal-service/src/crypto_signal_service/: config.py  llm_classifier.py
auto/signal-service/src/crypto_signal_service/fetchers/: gdelt_fetcher.py  rss_fetcher.py
auto/signal-service/src/crypto_signal_service/storage/: signal_writer.py
auto/signal-service/tests/: test_config.py  test_dedup_store.py  test_gdelt_fetcher.py  test_rss_fetcher.py
auto/signal-service/tests/debug/: classify.py
auto/trader/: Dockerfile  pyproject.toml
auto/trader/requirements/: requirements-ct.txt  requirements-t.in
auto/trader/src/: config.py  main.py  metrics.py
auto/trader/src/data/: ema_params.json
auto/trader/src/engine/: ema_filter.py  ema_refit.py  engine.py  strategy.py
auto/trader/src/kraken_api/: client.py  models.py
auto/trader/src/market/: questdb_client.py
auto/trader/src/signals/: __init__.py
(+87 files in other folders)
