[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trader"
version = "1.0.0"
requires-python = ">= 3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements-ct.txt"] }

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = ["--disable-plugin-autoload", "--import-mode=importlib"]
testpaths = ["tests/"]
